2022-01-27  Michael Saboff  <msaboff@apple.com>

        com.apple.WebKit.WebAuthn.xpc fails to build with system content path
        https://bugs.webkit.org/show_bug.cgi?id=235734

        Reviewed by Filip Pizlo.

        Since we symlink the the whole framework when building the main "WebKit" target,
        we can eliminate the create symlink script for the WebAuth target.
        Eliminated the setting of ALTERNATE_ROOT_PATH build variables for all XPC services.

        * Configurations/BaseXPCService.xcconfig:
        * WebKit.xcodeproj/project.pbxproj:

2022-01-27  Kate Cheney  <katherine_cheney@apple.com>

        "Unrecognized Content-Security-Policy directive 'worker-src'."
        https://bugs.webkit.org/show_bug.cgi?id=235260
        <rdar://problem/83734079>

        Reviewed by Brent Fulgham.

        * NetworkProcess/NetworkLoadChecker.cpp:
        (WebKit::NetworkLoadChecker::isAllowedByContentSecurityPolicy):

2022-01-27  Devin Rousso  <drousso@apple.com>

        [Payment Request] allow additional payment method specific data to be passed to `complete()`
        https://bugs.webkit.org/show_bug.cgi?id=235415
        <rdar://problem/82970451>

        Reviewed by Darin Adler.

        This allows for developers/merchants to give additional details to Apple Pay on completion.

        Issue: <https://github.com/w3c/payment-request/issues/981>
        Spec PR: <https://github.com/w3c/payment-request/pull/982>

        * WebProcess/ApplePay/WebPaymentCoordinator.h:
        * WebProcess/ApplePay/WebPaymentCoordinator.cpp:
        (WebKit::WebPaymentCoordinator::completePaymentSession):
        * Scripts/webkit/messages.py:
        (headers_for_type):
        * Shared/WebCoreArgumentCoders.h:
        * Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:
        (IPC::ArgumentCoder<WebCore::PaymentAuthorizationResult>::encode): Deleted.
        (IPC::ArgumentCoder<WebCore::PaymentAuthorizationResult>::decode): Deleted.